# 8090-python-prep

./: break.py  colorful-script.py  idea.py  idea2.py  pyproject.toml
src/: parse_int_safe.py  test_parse_safe_int.py
src/blackjack/: __init__.py
src/checkers/: __init__.py
src/common/: result.py
src/parse_int_safe/: __init__.py  test_main.py  test_parse_safe_int.py
src/rock_paper_scissors/: __init__.py
src/snake/: __init__.py
src/sudoku/: __init__.py
src/theme/: __init__.py  theme.py  themes.py
src/tic_tac_toe/: __init__.py
